Add Certifications page and update navigation menu

--- a/certifications.html
+++ b/certifications.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects - My Portfolio</title>
+    <title>Certifications - My Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,14 +18,15 @@
         </nav>
     </header>
     <main>
-        <section id="projects">
-            <h1>Projects</h1>
-            <input type="text" id="filter" placeholder="Filter by technology...">
-            <ul id="projectList">
-               
+        <section id="certifications">
+            <h1>Certifications</h1>
+            <ul>
+                <li>Certified Java Developer</li>
+                <li>Certified Node.js Developer</li>
+                <li>Certified Python Programmer</li>
+                <!-- Add more certifications as needed -->
             </ul>
         </section>
     </main>
-    <script src="script.js"></script>
 </body>
 </html>
